# SEFM

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  errors.py  factory.py  hardware.py  logging_config.py  registry.py  service.py
app/embedding/: base.py  sbert.py
app/generation/: base.py  citation_guard.py  llama_cpp.py  prompts.py
app/indexing/: keyword_store.py  vector_store.py
app/ingestion/: chunking.py  pipeline.py
app/ingestion/parsers/: base.py  pdf_parser.py
app/retrieval/: hybrid.py  types.py
app/ui/: ask_view.py  flow_layout.py  library_view.py  main_window.py  pdf_viewer.py  run.py  search_view.py  settings_dialog.py  theme.py  workers.py
scripts/: debug_ask.py  make_sample_pdf.py  ui_smoke.py  ui_smoke_ask.py  ui_theme_shot.py
tests/: conftest.py  test_chunking.py  test_citation_guard.py  test_config.py  test_hardware.py  test_hybrid.py  test_prompts.py  test_smoke.py
