[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sefm"
version = "1.0.0"
description = "Offline RAG assistant for ICS/SCADA technical documentation"
readme = "docs/PROJECT_PLAN.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "SEFM" }]

dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "structlog>=24.0",
]

[project.optional-dependencies]
ingest = [
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
]
embed = [
    "sentence-transformers>=3.0",
]
index = [
    "chromadb>=0.5",
    "bm25s>=0.2",
]
llm = [
    "llama-cpp-python>=0.3",
]
ui = [
    "PySide6>=6.7",
]
hardware = [
    "psutil>=5.9",
    "nvidia-ml-py>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
all = ["sefm[ingest,embed,index,llm,ui,hardware]"]

[project.scripts]
sefm = "app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
